Google fit and api repository call

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="colorText">#FFFFFF</color>
+    <color name="colorText">#3700B3</color>
+    <color name="colorWhiteText">#FFFFFF</color>
     <color name="colorHint">@android:color/holo_red_dark</color>
 </resources>
